--- a/Hands-on lab/lab-files/workflow/stagingdeploy.yml
+++ b/Hands-on lab/lab-files/workflow/stagingdeploy.yml
@@ -1,51 +1,53 @@
-
 name: Build and deploy app
 
 on:
   push
 
 env:
-  AZURE_WEBAPP_NAME: partsunlimited-web-suffix   # replace suffix
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_WEBAPP_NAME: partsunlimited-web-1572772   # replace suffix
+  AZURE_WEBAPP_PACKAGE_PATH: '.'  # Update this if needed
   DEPLOYMENT_SLOT: staging
   DOTNET_VERSION: '3.1'
-  AZURE_RESOURCEGROUP_NAME: hands-on-lab-suffix  # replace suffix  
-  
+  AZURE_RESOURCEGROUP_NAME: hands-on-lab-1572772  # replace suffix  
+
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
-    # env:
-    #   working-directory: ./src/PartsUnlimitedWebsite
+    runs-on: windows-latest  # Switch to Windows runner
+    
     steps:
       # Checkout the repo
       - uses: actions/checkout@main
-      
-      # Use npm 10
+
+      # Setup .NET Core 3.1 SDK
+      - name: Setup .NET Core 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      # Verify .NET version
+      - name: Verify .NET SDK
+        run: |
+          dotnet --version
+          dotnet --list-sdks
+          dotnet --info
+
+      # Use Node.js (as per your original workflow)
       - name: Use Node.js
         uses: actions/setup-node@v3
-
         with:
           node-version: '10.x'
-      
-      # Setup .NET Core SDK
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }} 
 
       # Run dotnet build and publish
       - name: dotnet build and publish
         run: |
           dotnet build PartsUnlimited.sln --configuration Release
           dotnet publish PartsUnlimited.sln -c Release -o PartsUnlimitedWebsite
-          
 
       # Deploy to Azure Web app slot
       - name: 'Run Azure webapp deploy action using publish profile credentials'
         uses: azure/webapps-deploy@v2
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/PartsUnlimitedWebsite'
           slot-name: ${{ env.DEPLOYMENT_SLOT }}
