--- a/Hands-on lab/lab-files/workflow/stagingdeploy.yml
+++ b/Hands-on lab/lab-files/workflow/stagingdeploy.yml
@@ -4,15 +4,15 @@ on:
   push
 
 env:
-  AZURE_WEBAPP_NAME: partsunlimited-web-1572772   # replace suffix
+  AZURE_WEBAPP_NAME: partsunlimited-web-suffix      # replace suffix
   AZURE_WEBAPP_PACKAGE_PATH: '.'  # Update this if needed
   DEPLOYMENT_SLOT: staging
   DOTNET_VERSION: '3.1'
-  AZURE_RESOURCEGROUP_NAME: hands-on-lab-1572772  # replace suffix  
+  AZURE_RESOURCEGROUP_NAME: hands-on-lab-suffix     # replace suffix  
 
 jobs:
   build-and-deploy:
-    runs-on: windows-latest  # Switch to Windows runner
+    runs-on: windows-latest  
     
     steps:
       # Checkout the repo
